# vinaykhatak38-eng-myphysicsagent

./: README.md  futuristic.html  index.html  main.py  physics_agent.py  pyproject.toml  requirements.txt  tests.py  vercel.json
api/: physics_agent.py  quantum.py
quantum_states/: __init__.py  cli.py  core.py  self_check.py
